cloudformation/2_Sec.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Create SecurityGroup 

Parameters:
#-------------------------------------------------------------------
# Base Name, etc
#-------------------------------------------------------------------
#Namebase for all resources
  Namebase:
    Type: String
    Default: "cfn-deploy"

Resources:
#-------------------------------------------------------------------
# EC2 Security Group
#-------------------------------------------------------------------
#Security Group for EC2
  SecGroupEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${Namebase}-secgroup-ec2"
      GroupDescription: Security Group for EC2
      VpcId: !ImportValue VPCNetworkID
      Tags:
        - Key: Name
          Value: !Sub "${Namebase}"

#Ingress Rule 1
  SecGroupEC2Ingress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecGroupEC2
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      SourceSecurityGroupId: !Ref SecGroupALB

#Egress Rule 1
  SecGroupEC2Egress1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SecGroupEC2
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0

#Egress Rule 2
  SecGroupEC2Egress2:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SecGroupEC2
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0

#Egress Rule 3
  SecGroupEC2Egress3:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SecGroupEC2
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      DestinationSecurityGroupId: !Ref SecGroupRDS

#-------------------------------------------------------------------
# ALB Security Group
#-------------------------------------------------------------------
#Security Group for ALB
  SecGroupALB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${Namebase}-secgroup-alb"
      GroupDescription: Security Group for ALB
      VpcId: !ImportValue VPCNetworkID
      Tags:
        - Key: Name
          Value: !Sub "${Namebase}"
          
#Ingress Rule 1
  SecGroupALBIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecGroupALB
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0

#Egress Rule 1
  SecGroupALBEgress1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SecGroupALB
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      DestinationSecurityGroupId: !Ref SecGroupEC2

#-------------------------------------------------------------------
# RDS Security Group
#-------------------------------------------------------------------
#Security Group for RDS
  SecGroupRDS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${Namebase}-secgroup-rds"
      GroupDescription: Security Group for RDS
      VpcId: !ImportValue VPCNetworkID
      Tags:
        - Key: Name
          Value: !Sub "${Namebase}"

#Ingress Rule 1
  SecGroupRDSIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecGroupRDS
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !Ref SecGroupEC2

Outputs:
#-------------------------------------------------------------------
# Outputs
#-------------------------------------------------------------------
#EC2 Security Group
  SecGroupEC2:
    Value: !Ref SecGroupEC2
    Export: 
      Name: SecGroupEC2-GroupID

#ALB Security Group
  SecGroupALB:
    Value: !Ref SecGroupALB
    Export: 
      Name: SecGroupALB-GroupID

#ALB Security Group
  SecGroupRDS:
    Value: !Ref SecGroupRDS
    Export: 
      Name: SecGroupRDS-GroupID
